# Digital-Image-Processing-Course

./: .gitignore  README.md
C++/: README.md  class.cpp  lambda.cpp  openmp.cpp  operate.cpp  pair.cpp  template.cpp  vector.cpp
C++ Prime/Sequence container/: elementEdit.cpp  initCopy.cpp  iteration.cpp  memory.cpp  stackAndqueue.cpp
C++ Prime/associate container/: associate.cpp  edit.cpp  pair.cpp
C++ Prime/function/: array.cpp  const.cpp  other.cpp  return.cpp
C++ Prime/generic algorithm/: algorithm.cpp  generic.drawio  predicate.cpp
C++ Prime/memory/: a.out  new.cpp  shared_ptr.cpp
C++ Prime/struct/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
C++ Prime/struct/inc/: Sales_data.h
C++ Prime/struct/src/: Sales_data.cpp
C++ Prime/vector/: binarySearch.cpp
C++/gprof/: gmon.out  main1.cpp  report.txt
C++/valgrind/: a.out  callgrind.out.22724  men.cpp  time.cpp
Image-processing-algorithm/: README.md
Image-processing-algorithm/Color Space Conversion/: README.md  rgb2gray.cpp  rgb2hsv.cpp
Image-processing-algorithm/Image Extracting/: README.md  connectedAreaMarkDFS.cpp  connectedAreaMarkSet.cpp  connectedAreaMarkTwoPass.cpp  localThresholding.cpp
Image-processing-algorithm/Image Filtering/: Integral.cpp  README.md  adaptiveMedianFilter.cpp  gaussianFilter.cpp  huangMedianFilter.cpp  integralBoxFilter.cpp  morphology.cpp
Image-processing-algorithm/Noise Implantation/: README.md  gaussianNoise.cpp  impulseNoise.cpp
Image-processing-algorithm/PhotoShop/: README.md
Image-processing-algorithm/PhotoShop/Image Mixing/: colorDodge.cpp
Image-processing-algorithm/PhotoShop/Sketch/: powderSketch.cpp
class-demo/bgSub/: CMakeLists.txt  main.cpp
class-demo/bgSub/inc/: bgSubDemo.h  parameterDemo.h
class-demo/enhancedHist/: CMakeLists.txt  main.cpp
class-demo/yolov3/: .gitignore  CMakeLists.txt  main.cpp
in_course/: README.md
in_course/week1/: printPrimeNumber.cpp
in_course/week10/: hog.cpp
in_course/week11/: CMakeLists.txt  main.cpp
in_course/week11/inc/: functions.h  stdafx.h
in_course/week11/src/: functions.cpp  functions.txt  stdafx.cpp
in_course/week12/: CMakeLists.txt  main.cpp
in_course/week13/: hogTempMatch.cpp  opencvTempMatch.cpp
in_course/week14/: kmeans.cpp  kmeansMovies.cpp
in_course/week2/: matCopy.cpp  pixelsAverage.cpp
in_course/week3/: hist.cpp  paint.cpp  splitBGR.cpp  video.cpp
in_course/week4/: rangeHSV.cpp  threshold.cpp  trackBar.cpp
in_course/week5/: circuitCount.cpp  clipCount.cpp  coinCount.cpp  morphology.cpp
in_course/week6/: blur.cpp  buffing.cpp  canny.cpp  sobel.cpp
in_course/week7/: rotateAndScale.cpp  rotateCorrect.cpp  warpAffine.cpp  warpPerspect.cpp  wholeRotate.cpp  wholeRotate2.cpp
in_course/week8/: houghLine.cpp  houghLinep.cpp
in_course/week9/: buffDetect.cpp  chipDetect.cpp  circleDetect.cpp  cupDectect.cpp  dectect3.cpp
multiview geometry/ch1/: transform.cpp
opencv/: rect.cpp  rotateRect.cpp
pre_course/: README.md
pre_course/week1/: imread.cpp  mat.cpp
pre_course/week10/: harris.cpp
pre_course/week12/: gamma.cpp
pre_course/week2/: accessMat.cpp
pre_course/week3/: imageToVideo.cpp  ostu.cpp  unionSet.cpp
project/armor/: CMakeLists.txt  main.cpp
project/bgSub/: CMakeLists.txt  main.cpp
project/buff/: CMakeLists.txt  main.cpp
project/dft/: CMakeLists.txt  dft.drawio  main.cpp
project/feature points/: CMakeLists.txt  main.cpp
project/fireDetect/: CMakeLists.txt  main.cpp  main.drawio
project/kalman/: buff.cpp  mouse.cpp
project/number/: CMakeLists.txt  main.cpp
project/openFace/: CMakeLists.txt  main.cpp
project/polygon detection/: CMakeLists.txt  main.cpp
project/roi/: CMakeLists.txt  main.cpp
project/roi/inc/: roi.h
project/roi/src/: roi.cpp
project/sbgm/: CMakeLists.txt  main.cpp
project/symmetry/: main.cpp
project/tracker/: main.cpp
(+43 files in other folders)
